# gbc-emulator

./: .gitignore  CMakeLists.txt  README.md  TODO.md
ext/glad/: readme.txt
ext/glad/include/glad/: gl.h
include/GBC/: memory_map.h  types.h
include/gb/: consts.h  gb.h  joypad.h
include/gb/apu/: apu.h
include/gb/cpu/: cpu.h  regs.h
include/gb/memory/: memory_map.h  mmu.h  serial.h  utils.h
include/gb/memory/cartridge/: cartridge.h
include/gb/memory/cartridge/mappers/: mbc1.h  no_mapper.h
include/gb/ppu/: consts.h  ppu.h
include/gb/ui/: ui.h
include/gb/utils/: bitops.h  load_file.h  log.h  print.h  sdl_log.h
src/: CMakeLists.txt  joypad.cpp  main.cpp
src/memory/: CMakeLists.txt  serial.cpp
src/memory/cartridge/: CMakeLists.txt  cartridge.cpp
src/memory/cartridge/mappers/: CMakeLists.txt  no_mapper.cpp
src/mmu/: mmu.cpp
src/mmu/cartridge/: cartridge.cpp
src/mmu/cartridge/mappers/: no_mapper.h
src/ui/: CMakeLists.txt  ui.cpp
src/ui/blargg/: CMakeLists.txt  ui_blargg.cpp
src/ui/mooneye/: CMakeLists.txt  ui_mooneye.cpp
src/ui/sdl/: CMakeLists.txt  ui_sdl.cpp
src/ui/tui/: CMakeLists.txt  ui_tui.cpp
src/utils/: CMakeLists.txt  load_file.cpp  log.cpp  print.cpp  sdl_log.cpp
